--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
     "axios": "^0.25.0",
+    "bootstrap": "^5.1.3",
     "cheerio": "^1.0.0-rc.10",
     "cors": "^2.8.5",
     "express": "^4.17.2",
+    "jquery": "^3.6.0",
     "nodemon": "^2.0.15",
     "puppeteer": "^13.1.3",
     "rxjs": "~7.4.0",
