--- a/package.json
+++ b/package.json
@@ -15,18 +15,27 @@
     "@angular/common": "~13.1.0",
     "@angular/compiler": "~13.1.0",
     "@angular/core": "~13.1.0",
+    "@angular/fire": "^7.2.0",
     "@angular/forms": "~13.1.0",
+    "@angular/material": "^13.2.1",
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "@material/toolbar": "^2.3.0",
+    "@ngneat/hot-toast": "^4.1.0",
+    "angular-animations": "^0.11.0",
+    "angular-material": "^1.2.4",
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "cheerio": "^1.0.0-rc.10",
     "cors": "^2.8.5",
     "express": "^4.17.2",
+    "firebase": "^9.4.0",
     "jquery": "^3.6.0",
+    "ngx-spinner": "^13.1.1",
     "nodemon": "^2.0.15",
-    "puppeteer": "^13.1.3",
+    "puppeteer": "^13.2.0",
+    "rxfire": "^6.0.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
