added new homepage headlines and login.signup componenets

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "@firebase/auth": "^0.19.8",
     "@material/toolbar": "^2.3.0",
     "@ngneat/hot-toast": "^4.1.0",
     "angular-animations": "^0.11.0",
@@ -31,6 +32,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "firebase": "^9.4.0",
+    "firebasets": "^1.2.13",
     "jquery": "^3.6.0",
     "ngx-spinner": "^13.1.1",
     "nodemon": "^2.0.15",
